@@ -300,21 +300,57 @@
     },
     {
       "name": "GuiStyleProp",
-      "description": "Style property",
+      "description": "NOTE: Used when exporting style as code for convenience",
       "fields": [
         {
           "type": "unsigned short",
           "name": "controlId",
-          "description": ""
+          "description": "Control identifier"
         },
         {
           "type": "unsigned short",
           "name": "propertyId",
+          "description": "Property identifier"
+        },
+        {
+          "type": "int",
+          "name": "propertyValue",
+          "description": "Property value"
+        }
+      ]
+    },
+    {
+      "name": "GuiTextStyle",
+      "description": "NOTE: Text style is defined by control",
+      "fields": [
+        {
+          "type": "unsigned int",
+          "name": "size",
           "description": ""
         },
         {
-          "type": "unsigned int",
-          "name": "propertyValue",
+          "type": "int",
+          "name": "charSpacing",
+          "description": ""
+        },
+        {
+          "type": "int",
+          "name": "lineSpacing",
+          "description": ""
+        },
+        {
+          "type": "int",
+          "name": "alignmentH",
+          "description": ""
+        },
+        {
+          "type": "int",
+          "name": "alignmentV",
+          "description": ""
+        },
+        {
+          "type": "int",
+          "name": "padding",
           "description": ""
         }
       ]
@@ -365,6 +401,48 @@
         },
         {
           "name": "TEXT_ALIGN_RIGHT",
+          "value": 2,
+          "description": ""
+        }
+      ]
+    },
+    {
+      "name": "GuiTextAlignmentVertical",
+      "description": "Gui control text alignment vertical",
+      "values": [
+        {
+          "name": "TEXT_ALIGN_TOP",
+          "value": 0,
+          "description": ""
+        },
+        {
+          "name": "TEXT_ALIGN_MIDDLE",
+          "value": 1,
+          "description": ""
+        },
+        {
+          "name": "TEXT_ALIGN_BOTTOM",
+          "value": 2,
+          "description": ""
+        }
+      ]
+    },
+    {
+      "name": "GuiTextWrapMode",
+      "description": "Gui control text wrap mode",
+      "values": [
+        {
+          "name": "TEXT_WRAP_NONE",
+          "value": 0,
+          "description": ""
+        },
+        {
+          "name": "TEXT_WRAP_CHAR",
+          "value": 1,
+          "description": ""
+        },
+        {
+          "name": "TEXT_WRAP_WORD",
           "value": 2,
           "description": ""
         }
@@ -463,82 +541,77 @@
         {
           "name": "BORDER_COLOR_NORMAL",
           "value": 0,
-          "description": ""
+          "description": "Control border color in STATE_NORMAL"
         },
         {
           "name": "BASE_COLOR_NORMAL",
           "value": 1,
-          "description": ""
+          "description": "Control base color in STATE_NORMAL"
         },
         {
           "name": "TEXT_COLOR_NORMAL",
           "value": 2,
-          "description": ""
+          "description": "Control text color in STATE_NORMAL"
         },
         {
           "name": "BORDER_COLOR_FOCUSED",
           "value": 3,
-          "description": ""
+          "description": "Control border color in STATE_FOCUSED"
         },
         {
           "name": "BASE_COLOR_FOCUSED",
           "value": 4,
-          "description": ""
+          "description": "Control base color in STATE_FOCUSED"
         },
         {
           "name": "TEXT_COLOR_FOCUSED",
           "value": 5,
-          "description": ""
+          "description": "Control text color in STATE_FOCUSED"
         },
         {
           "name": "BORDER_COLOR_PRESSED",
           "value": 6,
-          "description": ""
+          "description": "Control border color in STATE_PRESSED"
         },
         {
           "name": "BASE_COLOR_PRESSED",
           "value": 7,
-          "description": ""
+          "description": "Control base color in STATE_PRESSED"
         },
         {
           "name": "TEXT_COLOR_PRESSED",
           "value": 8,
-          "description": ""
+          "description": "Control text color in STATE_PRESSED"
         },
         {
           "name": "BORDER_COLOR_DISABLED",
           "value": 9,
-          "description": ""
+          "description": "Control border color in STATE_DISABLED"
         },
         {
           "name": "BASE_COLOR_DISABLED",
           "value": 10,
-          "description": ""
+          "description": "Control base color in STATE_DISABLED"
         },
         {
           "name": "TEXT_COLOR_DISABLED",
           "value": 11,
-          "description": ""
+          "description": "Control text color in STATE_DISABLED"
         },
         {
           "name": "BORDER_WIDTH",
           "value": 12,
-          "description": ""
+          "description": "Control border size, 0 for no border"
         },
         {
           "name": "TEXT_PADDING",
           "value": 13,
-          "description": ""
+          "description": "Control text padding, not considering border"
         },
         {
           "name": "TEXT_ALIGNMENT",
           "value": 14,
-          "description": ""
-        },
-        {
-          "name": "RESERVED",
-          "value": 15,
-          "description": ""
+          "description": "Control text horizontal alignment inside control text bound (after border and padding)"
         }
       ]
     },
@@ -570,6 +643,16 @@
           "name": "TEXT_LINE_SPACING",
           "value": 20,
           "description": "Text spacing between lines"
+        },
+        {
+          "name": "TEXT_ALIGNMENT_VERTICAL",
+          "value": 21,
+          "description": "Text vertical alignment inside text bounds (after border and padding)"
+        },
+        {
+          "name": "TEXT_WRAP_MODE",
+          "value": 22,
+          "description": "Text wrap-mode inside text bounds"
         }
       ]
     },
@@ -695,34 +778,9 @@
       "description": "TextBox/TextBoxMulti/ValueBox/Spinner",
       "values": [
         {
-          "name": "TEXT_INNER_PADDING",
-          "value": 16,
-          "description": "TextBox/TextBoxMulti/ValueBox/Spinner inner text padding"
-        },
-        {
-          "name": "TEXT_LINES_SPACING",
-          "value": 17,
-          "description": "TextBoxMulti lines separation"
-        },
-        {
-          "name": "TEXT_ALIGNMENT_VERTICAL",
-          "value": 18,
-          "description": "TextBoxMulti vertical alignment: 0-CENTERED, 1-UP, 2-DOWN"
-        },
-        {
-          "name": "TEXT_MULTILINE",
-          "value": 19,
-          "description": "TextBox supports multiple lines"
-        },
-        {
-          "name": "TEXT_WRAP_MODE",
-          "value": 20,
-          "description": "TextBox wrap mode for multiline: 0-NO_WRAP, 1-CHAR_WRAP, 2-WORD_WRAP"
-        },
-        {
           "name": "TEXT_READONLY",
-          "value": 21,
-          "description": "TextBox is readonly, no editable"
+          "value": 16,
+          "description": "TextBox in read-only mode: 0-text editable, 1-text no-editable"
         }
       ]
     },
